Thu Jan 14 13:04:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OS_Test.cpp:
          Unicode fix

Wed Jan 13 21:20:42 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/README:
          Removed ACE_HAS_BROKEN_CONDITIONAL_STRING_CASTS and
          ACE_HAS_BROKEN_UNEXPECTED_EXCEPTIONS. These are no longer used.

Wed Jan 13 21:18:42 UTC 2010  Olli Savia  <ops@iki.fi>

        * tests/Reference_Counted_Event_Handler_Test.cpp:
          Fixed typo.

Wed Jan 13 14:40:35 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue.h: Moved

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)
          #include "ace/Message_Queue_NT.h"
          #endif /* ACE_HAS_WIN32_OVERLAPPED_IO */

          back to this file based on comments from Arto.

Wed Jan 13 13:51:54 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue_T.cpp: Moved

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)
          #include "ace/Message_Queue_NT.h"
          #endif /* ACE_HAS_WIN32_OVERLAPPED_IO */

          to outside the versioned namespace block.  Thanks to Johnny for
          reporting this.

Wed Jan 13 09:03:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Only check run*.pl files when the filenames starts with run

Wed Jan 13 06:45:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_types.h:
        * ace/OS_NS_arpa_inet.cpp:
        * ace/OS_NS_unistd.inl:
          VxWorks 6.8 fixes

        * ace/UUID.cpp:
          Only one exit point for operator=, const change, initialise pointer with 0

Wed Jan 13 03:24:06 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Message_Queue.h,
        * ace/Message_Queue_T.cpp: Moved the code

          #if defined (ACE_HAS_WIN32_OVERLAPPED_IO)
          #include "ace/Message_Queue_NT.h"
          #endif /* ACE_HAS_WIN32_OVERLAPPED_IO */
