@@ -2313,6 +2313,7 @@ Pau Garcia i Quiles <pgquiles at elpauer dot org>
 Sail Zeng <sailzeng at tencent dot com>
 Dirk Bonekaemper <dirk dot bonekaemper at dfs dot de>
 Sreejith <sreejithsmadhavan at gmail dot com>
+Guillaume Lahaye <Guillaume dot Lahaye at nuance dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
