@@ -1,3 +1,10 @@
+Thu Jan 14 20:02:41 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * ace/OS_NS_Thread.cpp (add_to_argv): Replaced a call to strcpy()
+          with memmove() to avoid problems due to overlap with the
+          parameters.  Thanks to Guillaume Lahaye <Guillaume dot Lahaye at
+          nuance dot com> for reporting this.
+
 Thu Jan 14 13:04:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/OS_Test.cpp:
